{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 30,
  "lineage": "73023d88-cb4d-9c56-fc17-f3059613567a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:806473340808:internet-gateway/igw-0d436bb39c58414ec",
            "id": "igw-0d436bb39c58414ec",
            "owner_id": "806473340808",
            "tags": {
              "Name": "tangram-igw"
            },
            "tags_all": {
              "Name": "tangram-igw"
            },
            "vpc_id": "vpc-0271330a193e6c719"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:806473340808:route-table/rtb-08e9090e6867fc901",
            "id": "rtb-08e9090e6867fc901",
            "owner_id": "806473340808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d436bb39c58414ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tangram-rtb"
            },
            "tags_all": {
              "Name": "tangram-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271330a193e6c719"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e36c173200f625f",
            "route_table_id": "rtb-08e9090e6867fc901",
            "subnet_id": "subnet-0cf996f088923ba13"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rt",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050a09798b1fb41b8",
            "route_table_id": "rtb-08e9090e6867fc901",
            "subnet_id": "subnet-04fd7c86b18584c4c"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rt",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0decc2dc8371aec8e",
            "route_table_id": "rtb-08e9090e6867fc901",
            "subnet_id": "subnet-0b07dab61caf0e607"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rt",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:806473340808:security-group/sg-0caf4e6fb62c45464",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0caf4e6fb62c45464",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240331222659124400000008",
            "name_prefix": "terraform-",
            "owner_id": "806473340808",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tangram-sg"
            },
            "tags_all": {
              "Name": "tangram-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271330a193e6c719"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:806473340808:subnet/subnet-0cf996f088923ba13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf996f088923ba13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "806473340808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tangram-subnet-0"
            },
            "tags_all": {
              "Name": "tangram-subnet-0"
            },
            "vpc_id": "vpc-0271330a193e6c719"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:806473340808:subnet/subnet-04fd7c86b18584c4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd7c86b18584c4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "806473340808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tangram-subnet-1"
            },
            "tags_all": {
              "Name": "tangram-subnet-1"
            },
            "vpc_id": "vpc-0271330a193e6c719"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:806473340808:subnet/subnet-0b07dab61caf0e607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b07dab61caf0e607",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "806473340808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tangram-subnet-2"
            },
            "tags_all": {
              "Name": "tangram-subnet-2"
            },
            "vpc_id": "vpc-0271330a193e6c719"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:806473340808:vpc/vpc-0271330a193e6c719",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e76a0f6180981e29",
            "default_route_table_id": "rtb-01faa4940a2988db8",
            "default_security_group_id": "sg-034124c6f46a6185d",
            "dhcp_options_id": "dopt-05db446e049d3f2e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0271330a193e6c719",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01faa4940a2988db8",
            "owner_id": "806473340808",
            "tags": {
              "Name": "tangram-vpc"
            },
            "tags_all": {
              "Name": "tangram-vpc"
            }
          }
        }
      ]
    }
  ]
}